# algorithm

./: .gitignore  .swp
CF/: in.txt  out.txt
GCJ/: in.txt
algs4/: a.out  quickFind  quickFind.cpp  quickSort  quickSort.cpp  quickSort.cpp.save  quickUnion  quickUnion.cpp
benchmarks/: bench.cpp  firstandlast  firstandlast.cpp  luckfour  luckfour.cpp  results.html  reverse  reverse.cpp  sort  sort.cpp  sqrt  sqrt.cpp  stackvheap.cpp  test  test.cpp  tsort  tsort.cpp
clrs/: '  .dataStructs.cpp.swp  .pointer.cpp.swp  a.out  bst.cpp  clear  clear.cpp  dataStructs  dataStructs.cpp  dataStructs.h  graph.cpp  heap  heap.cpp  inversions  inversions.cpp  paths  paths.cpp  segtree  segtree.cpp  subarray.cpp  template  template.cpp
codechef/: '  a.out  bytecoin  cookmach  divsubs  divsubs.cpp  flipcoin  flipcoin.cpp  flipcoins  gentest  gentest.cpp  inmy.txt  into.txt  marbles  numfact  numfact.cpp  out.txt  out1.txt  pairand  palin  prime  prime.cpp  segtree  treeroot  tsort  tsort.cpp
codeforces/: 505A.cpp  769A  769A.cpp  793A.cpp  793B.cpp  in.txt
ctci/: rotate  rotate.cpp
euler/: even_fib  even_fib.cpp  lar_palin  lar_palin.cpp  prime_fact  prime_fact.cpp
gfg/: ford_fulkerson.cpp
hackerrank/: a.out  avl  avl.cpp  gentest  gentest.cpp  max_elem  max_elem.cpp  sparse  sparse.cpp
impl/: .avl.hpp.swp  .bst.c.swp  ]  avl  bit  (+28 more)
kaggle/: README.md  pyproject.toml  settings.ini
kaggle/.devcontainer/: devcontainer.json
kaggle/nbs/: _quarto.yml  index.ipynb
kaggle/nbs/assets/: nbdev.yml
kaggle/nbs/mnist/: nn.ipynb  svm.ipynb
kaggle/nbs/titanic/: eda.ipynb
(+875 files in other folders)
