[tool.poetry]
name = "notebook-template"
version = "0.1.0"
description = "A template for an nbdev based notebook project."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
fastai = "^2.7.11"
nbdev = "^2.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
